Inspection overlapping fixed at this point

--- a/css/style.css
+++ b/css/style.css
@@ -761,7 +761,7 @@ hr{
     margin-top: 60px;
     grid-column:1/5;
     background-color:rgba(0,126,180,1); 
-    height:81vh;
+    height:auto;
 }
 
 .box15_div{
@@ -775,7 +775,7 @@ hr{
 
 .box15Items{
     width: 100%;
-    height:300px;
+    height:auto;
     border: solid 0px rgb(29, 28, 28);
     font-size: 16px;
     font-family: var(--myfont);
@@ -813,9 +813,11 @@ hr{
 .changes{
     width: 100%;
     grid-column: 1/5;
-    
     padding-top: 30px;
-    height: 150px;
+    height: auto;
+    padding-bottom: 30px;
+    
+
 }
 
 .changes .ImgLast{
@@ -833,12 +835,13 @@ hr{
 
 .box16{
     width: 100%;
-    height: 100px;
+    height: auto;
     grid-column: 1/5;
     box-sizing: border-box;
     background-color: #20313b;
     display: flex;
     justify-content:space-around;
+    
     
 }
 
@@ -847,8 +850,7 @@ hr{
     font-family: var(--myfont);
     border: solid 0px black;
     display:flex;
-   
-    
+    box-sizing: border-box;    
 }
 
 .wificon{
